Fixed Wallet/account feature : ownership link , security , AI endpoints , transaction status